--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,16 @@ dynamic = ["version"]
 license-files = { paths = ["LICENSE"] }
 classifiers= [
     "Development Status :: 5 - Production/Stable",
-    "Environment :: Console",
-    "Intended Audience :: Science/Research",
+    "Environment :: Plugins",
     "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
+    "Framework :: Sphinx :: Extension",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Typing :: Typed",
 ]
 
 [project.urls]
