--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ authors = [ {name = "sphinxext-altair Contributors"} ]
 dependencies = [
     "sphinx",
     "docutils",
-    "altair>=5.0.0"
+    "altair>=5.0.0",
+    "typing_extensions>=4.0.1; python_version<\"3.8\"",
 ]
 description = "sphinxext-altair: Sphinx extension for embedding Altair charts"
 readme = "README.md"
@@ -97,6 +98,7 @@ exclude = '''
   | \.mypy_cache
   | build
   | dist
+  | .venv
 )/
 '''
 
