No longer include pyproject.toml, LICENSE, and README.md in package distributions (#5)
* No longer include pyproject.toml, LICENSE, and README.md in distributions

* Remove comma

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,10 +67,7 @@ allow-direct-references = true
 
 [tool.hatch.build]
 include = [
-    "/sphinxext_altair",
-    "README.md",
-    "LICENSE",
-    "pyproject.toml"
+    "/sphinxext_altair"
 ]
 
 [tool.hatch.envs.default]
