Add jinja2 dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ build-backend = "hatchling.build"
 name = "sphinxext-altair"
 authors = [ {name = "sphinxext-altair Contributors"} ]
 dependencies = [
-    "sphinx",
-    "docutils",
     "altair>=4.0.0",
+    "docutils",
+    "jinja2",
+    "sphinx",
     "typing_extensions>=4.0.1; python_version<\"3.8\"",
 ]
 description = "sphinxext-altair: Sphinx extension for embedding Altair charts"
