ci: Fix missing `hatch run` in github action
https://github.com/dangotbanned/sphinxext-altair/actions/runs/10422611217/job/28867476849

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
         hatch run ruff format --check .
     - name: Lint with mypy
       run: |
-        mypy sphinxext_altair tests
+        hatch run mypy sphinxext_altair tests
